@@ -432,6 +432,8 @@ name|namenode
 operator|.
 name|snapshot
 operator|.
+name|FileWithSnapshot
+operator|.
 name|FileDiffList
 import|;
 end_import
