@@ -86,38 +86,6 @@ name|fs
 operator|.
 name|permission
 operator|.
-name|FsAction
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|fs
-operator|.
-name|permission
-operator|.
-name|FsPermission
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|fs
-operator|.
-name|permission
-operator|.
 name|PermissionStatus
 import|;
 end_import
@@ -226,26 +194,6 @@ name|namenode
 operator|.
 name|snapshot
 operator|.
-name|FileDiffList
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|server
-operator|.
-name|namenode
-operator|.
-name|snapshot
-operator|.
 name|FileWithSnapshot
 import|;
 end_import
@@ -269,6 +217,28 @@ operator|.
 name|FileWithSnapshot
 operator|.
 name|FileDiff
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|namenode
+operator|.
+name|snapshot
+operator|.
+name|FileWithSnapshot
+operator|.
+name|FileDiffList
 import|;
 end_import
 
