@@ -172,6 +172,24 @@ name|server
 operator|.
 name|namenode
 operator|.
+name|INodeFileUnderConstruction
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|namenode
+operator|.
 name|Quota
 import|;
 end_import
@@ -199,7 +217,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * {@link INodeFile} with a link to the next element.  * The link of all the snapshot files and the original file form a circular  * linked list so that all elements are accessible by any of the elements.  */
+comment|/**  * An interface for {@link INodeFile} to support snapshot.  */
 end_comment
 
 begin_interface
@@ -234,6 +252,7 @@ name|long
 name|fileSize
 decl_stmt|;
 DECL|method|FileDiff (Snapshot snapshot, INodeFile file)
+specifier|private
 name|FileDiff
 parameter_list|(
 name|Snapshot
@@ -619,6 +638,130 @@ argument_list|,
 name|removedINodes
 argument_list|)
 return|;
+block|}
+block|}
+comment|/** A list of FileDiffs for storing snapshot data. */
+DECL|class|FileDiffList
+specifier|public
+specifier|static
+class|class
+name|FileDiffList
+extends|extends
+name|AbstractINodeDiffList
+argument_list|<
+name|INodeFile
+argument_list|,
+name|FileDiff
+argument_list|>
+block|{
+annotation|@
+name|Override
+DECL|method|createDiff (Snapshot snapshot, INodeFile file)
+name|FileDiff
+name|createDiff
+parameter_list|(
+name|Snapshot
+name|snapshot
+parameter_list|,
+name|INodeFile
+name|file
+parameter_list|)
+block|{
+return|return
+operator|new
+name|FileDiff
+argument_list|(
+name|snapshot
+argument_list|,
+name|file
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|createSnapshotCopy (INodeFile currentINode)
+name|INodeFile
+name|createSnapshotCopy
+parameter_list|(
+name|INodeFile
+name|currentINode
+parameter_list|)
+block|{
+if|if
+condition|(
+name|currentINode
+operator|instanceof
+name|INodeFileUnderConstructionWithSnapshot
+condition|)
+block|{
+specifier|final
+name|INodeFileUnderConstruction
+name|uc
+init|=
+operator|(
+name|INodeFileUnderConstruction
+operator|)
+name|currentINode
+decl_stmt|;
+specifier|final
+name|INodeFileUnderConstruction
+name|copy
+init|=
+operator|new
+name|INodeFileUnderConstruction
+argument_list|(
+name|uc
+argument_list|,
+name|uc
+operator|.
+name|getClientName
+argument_list|()
+argument_list|,
+name|uc
+operator|.
+name|getClientMachine
+argument_list|()
+argument_list|,
+name|uc
+operator|.
+name|getClientNode
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|copy
+operator|.
+name|setBlocks
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+return|return
+name|copy
+return|;
+block|}
+else|else
+block|{
+specifier|final
+name|INodeFile
+name|copy
+init|=
+operator|new
+name|INodeFile
+argument_list|(
+name|currentINode
+argument_list|)
+decl_stmt|;
+name|copy
+operator|.
+name|setBlocks
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+return|return
+name|copy
+return|;
+block|}
 block|}
 block|}
 comment|/** @return the {@link INodeFile} view of this object. */
